@@ -18,6 +18,7 @@ MS SQL: Remove support for MSSQL extension
 MS SQL: Add support for PDO_SQLSRV extension
 MS SQL: Link help from sys tables
 MongoDB: Remove support for deprecated extension mongo
+Elasticsearch: Fix text search on boolean fields
 
 Adminer 4.17.1 (released 2025-02-25):
 MySQL: Fix typo in the date type (regression from 4.17.0)
